crates/qoo-tui/tests/snapshots/args_form_snapshot__args_form_multiline_and_prompt_snapshot.snap
---
source: crates/qoo-tui/tests/args_form_snapshot.rs
expression: term.backend()
---
"                                                            daemon unreachable — retrying… running 0"
"╭📋 QUEUE── [r] [x] [a] · [c] [z]╮╭📄 DETAIL───────────────────────────────────────────────────────╮" Hidden by multi-width symbols: [(2, " "), (36, " ")]
"│                                ││                                                                │"
"│ 🔍 [/] f╭ pr-ready args ───────────────────╮╭ pr-ready ────────────────────────────────╮         │" Hidden by multi-width symbols: [(3, " ")]
"│         │                                  ││                                          │         │"
"│ queue em│   pr  PR number                  ││  Flip the PR from WIP to                 │         │"
"│         │    first line of the report      ││  ready-for-review.                       │         │"
"│         │    second line that is long en   ││                                          │         │"
"│         │    ough to soft-wrap across th   ││  Run a self review sized to the diff,    │         │"
"│         │    e field                       ││  sync the description, then assign the   │         │"
"│         │                                  ││  four standing reviewers.                │         │"
"│         │   mode ‹ready›                   ││                                          │         │"
"│         │                                  ││                                          │         │"
"│         │   source wt-a                    ││                                          │         │"
"╰─────────│                                  ││                                          │         │"
"╭⚡TASKS ·│                                  ││                                          │         │" Hidden by multi-width symbols: [(2, " ")]
"│ 🔍 [/] f│                                  ││                                          │         │" Hidden by multi-width symbols: [(3, " ")]
"│ no task │                                  ││                                          │         │"
"│         │                                  ││                                          │         │"
"│         │                                  ││                                          │         │"
"╰─────────│                                  ││                                          │         │"
"╭🌲 WORKTR│                                  ││                                          │         │" Hidden by multi-width symbols: [(2, " ")]
"│ 🔍 [/] f│   [ Run ]  [ Cancel ]            ││                                          │         │" Hidden by multi-width symbols: [(3, " ")]
"│ no workt│                                  ││                                          │         │"
"│         ╰ tab/↑↓ move · ←/→ enum · shift+en╯╰──────────────────────────────────────────╯         │"
"│                                ││                                                                │"
"╰────────────────────────────────╯╰────────────────────────────────────────────────────────────────╯"
"[1-9/0 · ctrl+s n/p] tab · [ctrl+x/z] sub-tab · [?] help · [q]uit                                   "
