crates/qoo-tui/tests/snapshots/args_form_snapshot__args_form_snapshot.snap
---
source: crates/qoo-tui/tests/args_form_snapshot.rs
expression: term.backend()
---
"                                        daemon unreachable — retrying… running 0"
"╭📋 QUEUE───── [r] [x] [a]╮╭📄 DETAIL──────────────────────────────────────────╮" Hidden by multi-width symbols: [(2, " "), (29, " ")]
"│       ╭ pr-ready args ───────────╮╭ pr-ready ────────────────────────╮       │"
"│ 🔍 [/]│                          ││                                  │       │" Hidden by multi-width symbols: [(3, " ")]
"│       │   pr  PR number          ││  (loading definition…)           │       │"
"│ queue │                          ││                                  │       │"
"│       │                          ││                                  │       │"
"│       │   mode ‹ready›           ││                                  │       │"
"│       │                          ││                                  │       │"
"│       │   source wt-a            ││                                  │       │"
"│       │                          ││                                  │       │"
"│       │                          ││                                  │       │"
"╰───────│                          ││                                  │       │"
"╭⚡TASKS│                          ││                                  │       │" Hidden by multi-width symbols: [(2, " ")]
"│ 🔍 [/]│                          ││                                  │       │" Hidden by multi-width symbols: [(3, " ")]
"│ no tas│                          ││                                  │       │"
"│       │                          ││                                  │       │"
"╰───────│                          ││                                  │       │"
"╭🌲 WORK│   [ Run ]  [ Cancel ]    ││                                  │       │" Hidden by multi-width symbols: [(2, " ")]
"│ 🔍 [/]│                          ││                                  │       │" Hidden by multi-width symbols: [(3, " ")]
"│ no wor╰ tab/↑↓ move · ←/→ enum · ╯╰──────────────────────────────────╯       │"
"│                         ││                                                   │"
"╰─────────────────────────╯╰───────────────────────────────────────────────────╯"
"[1-9/0 · ctrl+s n/p] tab · [ctrl+x/z] sub-tab · [?] help · [q]uit               "
